# admm-slam

./: .gitignore  README.md  index.html  params.json
cpp/: .cproject  .project  CMakeLists.txt
cpp/apps/: PartitionAndRunADMM.cpp  RunADMM.cpp
cpp/src/: ADMM.cpp  ADMM.h  ADMMUtils.h  BiasedBetweenFactor.h  BiasedPriorFactor.h
cpp/tests/: CMakeLists.txt  testBiasedBetweenFactor.cpp  testBiasedPriorFactor.cpp
data/benchmark-data/: CSAIL_I_eq.g2o  FR079_I_eq.g2o
data/blocks_world/width151/: 0.g2o  1.g2o  10.g2o  11.g2o  12.g2o  13.g2o  14.g2o  15.g2o  16.g2o  17.g2o  18.g2o  19.g2o  2.g2o  20.g2o  21.g2o  22.g2o  23.g2o  24.g2o  3.g2o  4.g2o  5.g2o  6.g2o  7.g2o  8.g2o  9.g2o  fullGraph.g2o  separators.txt
data/blocks_world/width211/: 0.g2o  1.g2o  10.g2o  11.g2o  12.g2o  13.g2o  14.g2o  15.g2o  16.g2o  17.g2o  18.g2o  19.g2o  2.g2o  20.g2o  21.g2o  22.g2o  23.g2o  24.g2o  25.g2o  26.g2o  27.g2o  28.g2o  29.g2o  3.g2o  30.g2o  31.g2o  32.g2o  33.g2o  34.g2o  35.g2o  36.g2o  37.g2o  38.g2o  39.g2o  4.g2o  40.g2o  41.g2o  42.g2o  43.g2o  44.g2o  (+10 more)
data/blocks_world/width271/: 0.g2o  1.g2o  10.g2o  11.g2o  12.g2o  13.g2o  14.g2o  15.g2o  16.g2o  17.g2o  18.g2o  19.g2o  2.g2o  20.g2o  21.g2o  22.g2o  23.g2o  24.g2o  25.g2o  26.g2o  27.g2o  28.g2o  29.g2o  3.g2o  30.g2o  31.g2o  32.g2o  33.g2o  34.g2o  35.g2o  36.g2o  37.g2o  38.g2o  39.g2o  4.g2o  40.g2o  41.g2o  42.g2o  43.g2o  44.g2o  (+42 more)
data/blocks_world/width361/: 0.g2o  1.g2o  10.g2o  100.g2o  101.g2o  (+140 more)
docker/: Makefile
docker/admm_slam/: Dockerfile
scripts/: runADMMOnBenchmarkData.sh  runADMMOnSyntheticData.sh
(+18 files in other folders)
